--- a/animism-site/src/content/wiki/[slug].astro
+++ b/animism-site/src/content/wiki/[slug].astro
@@ -1,5 +1,5 @@
 ---
-import { getCollection, getEntryBySlug } from 'astro:content';
+import { getCollection, getEntry } from 'astro:content';
 import Layout from '../../layouts/Layout.astro';
 
 export async function getStaticPaths() {
@@ -10,7 +10,7 @@ export async function getStaticPaths() {
 }
 
 const { slug } = Astro.params;
-const page = await getEntryBySlug('wiki', slug);
+const page = await getEntry('wiki', slug);
 
 if (!page) {
   throw new Error(`Wiki page not found: ${slug}`);
