removed old directory

--- a/animism-site/src/layouts/WikiLayout/index.astro
+++ b/animism-site/src/layouts/WikiLayout/index.astro
@@ -1,5 +1,5 @@
 ---
-import WikiSidebar from '../../components/WikiSidebar.js';
+import WikiSidebar from '../../components/WikiSidebar/index.jsx';
 import PageLayout from '../PageLayout/index.astro';
 import { getCollection } from 'astro:content';
 import styles from './WikiLayout.module.css';
