--- a/animism-site/src/components/Navbar/index.astro
+++ b/animism-site/src/components/Navbar/index.astro
@@ -38,7 +38,7 @@ const { pages } = Astro.props;
         ))
       }
       <li class={styles.navItemWrapper}>
-        <a href={`/wiki`} class={`${styles.navItem}`}>The Library</a>
+        <a href={`/library`} class={`${styles.navItem}`}>The Library</a>
       </li>
     </ul>
   </nav>
