--- a/animism-site/src/layouts/PageLayout/index.astro
+++ b/animism-site/src/layouts/PageLayout/index.astro
@@ -42,6 +42,7 @@ const pages = nestPages(filteredPages);
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>My Site</title>
   </head>
 
